--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".provinceActivity">
+        <activity android:name=".ProvinceActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,7 +19,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".cityActivity"
+            android:name=".CityActivity"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".WeatherActivity" />
         <activity android:name=".CountyActivity"></activity>
